cross/qemu-user: update

--- a/cross/qemu-user-static-bin/PKGBUILD
+++ b/cross/qemu-user-static-bin/PKGBUILD
@@ -8,7 +8,7 @@ _pkgname=qemu-user-static
 pkgname=qemu-user-static-bin
 pkgdesc="A generic and open source machine emulator, statically linked"
 pkgver=6.1
-pkgrel=10
+pkgrel=11
 _arches=all
 arch=(
     x86_64
@@ -31,7 +31,7 @@ conflicts=(
     qemu-user-static
 )
 
-_pkgadditver="+dfsg-6"
+_pkgadditver="+dfsg-8+b2"
 # case "${CARCH}" in
 #    "")_pkgadditver="+dfsg-sth-else"
 # esac
@@ -42,11 +42,11 @@ source_aarch64=("https://deb.debian.org/debian/pool/main/q/qemu/${_pkgname}_${pk
 source_armv7h=("https://deb.debian.org/debian/pool/main/q/qemu/${_pkgname}_${pkgver}${_pkgadditver}_armhf.deb")
 source_armv6h=("https://deb.debian.org/debian/pool/main/q/qemu/${_pkgname}_${pkgver}${_pkgadditver}_armel.deb")
 
-sha256sums_x86_64=('8d5cad1871d43852a213fe5cc241f14f00ba9a701c2fbf6941d0a01fcf183cb4')
-sha256sums_i686=('9228d9776cd78728ef842d059549bce5db36efc196980f734a64e745b2868a35')
-sha256sums_aarch64=('5583b19ed69a5bd102ac53eeb60d52b8e9357ff6746b2a88277000116ed8d7b6')
-sha256sums_armv7h=('b0059c4937849b01f463c68a7682dbf30122ac345214f67dcbc731e4c001c355')
-sha256sums_armv6h=('a227143415ee98d523cf7f92072a18fb904bb06324c69c920742ae1102a4235f')
+sha256sums_x86_64=('917e0bed044374bda4607c07dc5b28614176397c7c10025f67e88adb7c9a8e92')
+sha256sums_i686=('add7d26016c5c0a2a28d58dd0b7dad1cadc2df5bf5bc0489dc634e2c6038caa3')
+sha256sums_aarch64=('b3aa30eefd51d7c37d6f12b95a595ea84e5326c1d41eb6979cc78a5061b2d754')
+sha256sums_armv7h=('aace823e6d6802d31d9e46d35149e1e8ca2ba9e018cce07d7823c9e3abed87af')
+sha256sums_armv6h=('63a796fd3555d6e5ccc5e7bcde366b046c1ca35b04a1d72fc8574144b986b660')
 
 package() {
     cd "${pkgdir}"
