--- a/phosh/phosh/PKGBUILD
+++ b/phosh/phosh/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=phosh
 pkgdesc="The phosh Shell"
-pkgver=r2566.2460244
+pkgver=0.15.0.r0.ga964be1
 pkgrel=1
 _arches=all
 arch=(
@@ -28,7 +28,7 @@ makedepends=(
     meson
     ninja
 )
-_commit=24602448d30355d9f928d5f55405c1e1dab294bc
+_commit=a964be122953d4cbcf63b75793c60f231ec35d71
 source=(
     "git+$url#commit=$_commit"
     pam_phosh
@@ -44,7 +44,7 @@ sha256sums=(
 
 pkgver() {
     cd "$pkgname"
-    printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
