--- a/phosh/phoc/PKGBUILD
+++ b/phosh/phoc/PKGBUILD
@@ -16,6 +16,8 @@ depends=(
     libinput
     mutter
     wayland-protocols
+    seatd
+    xcb-util-wm
 )
 makedepends=(
     meson
@@ -23,7 +25,7 @@ makedepends=(
 )
 
 _commit=eb62bea7cfb3ca0a4fe417811a868e3ac95b81c5
-_wlroots_commit=5fb694d5b051e842880241f01e2e9f528f02826a
+_wlroots_commit=c9cd3502ba6113070020de50e41f0af72e0f5031
 source=(
     "git+$url#commit=$_commit"
     "git+https://source.puri.sm/Librem5/wlroots#commit=$_wlroots_commit"
@@ -48,12 +50,9 @@ prepare() {
 build() {
     arch-meson ${pkgname} output -Dtests=false \
         -Dembed-wlroots=enabled --default-library=static \
-        -Dwlroots:logind-provider=systemd \
-        -Dwlroots:libseat=disabled \
         -Dwlroots:examples=false \
         -Dwlroots:x11-backend=disabled \
-        -Dwlroots:xcb-errors=disabled \
-        -Dwlroots:xcb-icccm=disabled
+        -Dwlroots:xcb-errors=disabled
     ninja -C output
 }
 
