firmware/sdm845-*: add !nostrip
also bump for rebuilding after cherry-picking the correct version of
"Use prepackaged firmware releases instead of extraction scripts"

--- a/firmware/sdm845-xiaomi-beryllium/PKGBUILD
+++ b/firmware/sdm845-xiaomi-beryllium/PKGBUILD
@@ -1,10 +1,11 @@
 _mode=cross
 pkgname=firmware-sdm845-xiaomi-beryllium
 pkgver=0.2
-pkgrel=1
+pkgrel=2
 _arches=specific
 arch=(aarch64)
 license=(custom:Proprietary)
+options=(!strip)
 source=(
     "git+https://gitlab.com/sdm845-mainline/firmware-xiaomi-beryllium.git"
 )
