--- a/firmware/sdm845-oneplus/PKGBUILD
+++ b/firmware/sdm845-oneplus/PKGBUILD
@@ -1,10 +1,11 @@
 _mode=cross
 pkgname=firmware-sdm845-oneplus
 pkgver=0.2
-pkgrel=1
+pkgrel=2
 _arches=specific
 arch=(aarch64)
 license=(custom:Proprietary)
+options=(!strip)
 source=(
     "git+https://gitlab.com/sdm845-mainline/firmware-oneplus-sdm845.git#branch=prepackaged-release"
 )
