--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,20 +31,28 @@ check_formatting:
   script:
     - script --log-out "$LOGFILE" -c 'kupferbootstrap packages check all'
 
-build_packages:
+.build:
   stage: build
   tags:
     - packages
-  only:
-    - merge_requests
   script: &build_script
     - cd /kupfer
-    - git clone --depth=1 -b "$CI_COMMIT_BRANCH" https://gitlab.com/kupfer/packages/prebuilts.git packages
+    - git clone --depth=1 -b "$REPOBRANCH" https://gitlab.com/kupfer/packages/prebuilts.git packages
     - script --log-out "$LOGFILE" -c 'kupferbootstrap packages clean --force'
     - script --log-out "$LOGFILE" -c 'kupferbootstrap packages build all'
 
+build_packages:
+  variables:
+    REPOBRANCH: dev
+  extends: .build
+  except:
+    - main
+    - dev
+
 push_packages:
-  extends: build_packages
+  variables:
+    REPOBRANCH: "$CI_COMMIT_BRANCH"
+  extends: .build
   tags:
     - packages
   only:
