CI: only re-run push job when non-CI settings are changed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,11 @@ build_packages:
   variables:
     REPOBRANCH: dev
   extends: .build
+  only:
+    refs:
+      - branches
+    changes:
+      - '[a-z]*/*/*'
   except:
     - main
     - dev
