--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ check_formatting:
   tags:
     - packages
   script:
-    - script --log-out "$LOGFILE" -c 'kupferbootstrap packages check all'
+    - script -e --log-out "$LOGFILE" -c 'kupferbootstrap packages check all'
 
 .build:
   stage: build
@@ -38,8 +38,8 @@ check_formatting:
   script: &build_script
     - cd /kupfer
     - git clone --depth=1 -b "$REPOBRANCH" https://gitlab.com/kupfer/packages/prebuilts.git packages
-    - script --log-out "$LOGFILE" -c 'kupferbootstrap packages clean --force'
-    - script --log-out "$LOGFILE" -c 'kupferbootstrap packages build all'
+    - script -e --log-out "$LOGFILE" -c 'kupferbootstrap packages clean --force'
+    - script -e --log-out "$LOGFILE" -c 'kupferbootstrap packages build all'
     - 'cd ./pkgbuilds && for f in $(git ls-files --modified); do echo "Nag: file $f has been modified by the CI:" >&2 ; git diff "$f" ; echo; done'
 
 build_packages:
