--- a/phosh/callaudiod/PKGBUILD
+++ b/phosh/callaudiod/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=callaudiod
 pkgdesc="Call audio routing daemon"
-pkgver=0.1.3.r0.g4cb8bd9
+pkgver=0.1.4.r0.ga7ca6ce
 pkgrel=1
 _arches=all
 arch=(
@@ -16,7 +16,7 @@ depends=(
     libpulse
 )
 makedepends=(meson)
-_commit=4cb8bd9d228d13ea67e79f4c37c674f412b32d20
+_commit=a7ca6ce9d4c947f19c3f99ff2cab986c64434e57
 source=("git+$url#commit=$_commit")
 sha256sums=(SKIP)
 
