--- a/phosh/phoc/PKGBUILD
+++ b/phosh/phoc/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=phoc
 pkgdesc="A compositor for phones based on wlroots"
-pkgver=0.12.0.r0.geb62bea
+pkgver=0.13.1.r0.g4f72cf1
 pkgrel=1
 _arches=all
 arch=(
@@ -24,8 +24,8 @@ makedepends=(
     ninja
 )
 
-_commit=eb62bea7cfb3ca0a4fe417811a868e3ac95b81c5
-_wlroots_commit=c9cd3502ba6113070020de50e41f0af72e0f5031
+_commit=4f72cf1e67a3f0f224326b2662b7dedab3f5a8cf
+_wlroots_commit=5016f79f2734c1b1d4d1f1f33f0374c3043f2ea0
 source=(
     "git+$url#commit=$_commit"
     "git+https://source.puri.sm/Librem5/wlroots#commit=$_wlroots_commit"
