--- a/phosh/phosh/PKGBUILD
+++ b/phosh/phosh/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=phosh
 pkgdesc="The phosh Shell"
-pkgver=0.15.1.r609.g54116910
+pkgver=0.17.0.r0.ge9651c72
 pkgrel=1
 _arches=all
 arch=(
@@ -9,7 +9,7 @@ arch=(
     aarch64
 )
 license=(GPL)
-url=https://gitlab.gnome.org/guidog/phosh
+url=https://gitlab.gnome.org/World/Phosh/phosh
 depends=(
     gtk3
     libhandy
@@ -28,15 +28,13 @@ makedepends=(
     meson
     ninja
 )
-_commit=54116910d95a6e77a7653905531e313bda8fcc00
+_commit=e9651c72a6c3033597d40b135c230262a2bf4cb6
 source=(
     "git+$url#commit=$_commit"
     pam_phosh
-    sm.puri.OSK0.desktop
     phosh.service
 )
 sha256sums=(
-    SKIP
     SKIP
     SKIP
     SKIP
@@ -44,7 +42,7 @@ sha256sums=(
 
 pkgver() {
     cd "$pkgname"
-    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g' | sed 's/^0.12/0.15/'
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
@@ -55,13 +53,8 @@ build() {
 package() {
     DESTDIR="$pkgdir" ninja -C output install
 
-    install -Dm755 output/tools/phosh-osk-stub \
-         "$pkgdir"/usr/bin/phosh-osk-stub
-
     install -Dm644 "$srcdir"/phosh.service \
         "$pkgdir"/usr/lib/systemd/system/phosh.service
     install -Dm644 "$srcdir"/pam_phosh \
         "$pkgdir"/etc/pam.d/phosh
-    install -Dm644 "$srcdir"/sm.puri.OSK0.desktop \
-        "$pkgdir"/usr/share/applications/sm.puri.OSK0.desktop
 }
