--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ check_formatting:
     - git clone --depth=1 -b "$REPOBRANCH" https://gitlab.com/kupfer/packages/prebuilts.git packages
     - script -e --log-out "$LOGFILE" -c 'kupferbootstrap packages clean --force'
     - script -e --log-out "$LOGFILE" -c 'kupferbootstrap packages build all'
-    - 'cd ./pkgbuilds && for f in $(git ls-files --modified); do echo "Nag: file $f has been modified by the CI:" >&2 ; git diff "$f" ; echo; done'
+    - 'cd ./pkgbuilds && ./.gitlab/check_modified.sh'
 
 build_packages:
   variables:
