CI: only add repos to prebuilts which had package files added

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,6 +88,6 @@ push_packages:
     - git config --global user.name "Kupfer Bot"
     - cd /kupfer/packages
     - git remote set-url origin git@gitlab.com:kupfer/packages/prebuilts.git
-    - git add .
+    - (git ls-files --others --exclude-standard | grep '\.pkg\.' | xargs -r dirname | xargs -r git add) || echo "apparently no packages to upload."
     # try pushing twice since pushing occasionally fails, which can be painful after a long build
-    - git commit -m "$("$GIT_CLONE_PATH"/.gitlab/generate-commit-message.sh)" && (git push || git push)
+    - git commit -m "$("$GIT_CLONE_PATH"/.gitlab/generate-commit-message.sh)" ; (git push || git push)
